--- a/package.json
+++ b/package.json
@@ -2,12 +2,22 @@
   "name": "react",
   "version": "1.0.0",
   "description": "React example starter project",
-  "keywords": ["react", "starter"],
+  "keywords": [
+    "react",
+    "starter"
+  ],
   "main": "src/index.js",
   "dependencies": {
+    "@ethersproject/address": "5.3.0",
+    "@ethersproject/contracts": "5.3.0",
+    "@ethersproject/providers": "5.3.0",
+    "@ethersproject/solidity": "5.3.0",
+    "@uniswap/sdk": "3.0.3",
+    "framer-motion": "4.1.17",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "styled-components": "5.3.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
@@ -19,5 +29,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
